--- a/12bool-responsive/css/12bool.css
+++ b/12bool-responsive/css/12bool.css
@@ -121,6 +121,56 @@
 .col-lg-1 {
   width: calc((100% / 12) * 1);
 }
+
+.col-lg-offset-12 {
+  margin-left: 100%;
+}
+
+.col-lg-offset-11 {
+  margin-left: calc((100% / 12) * 11);
+}
+
+.col-lg-offset-10 {
+  margin-left: calc((100% / 12) * 10);
+}
+
+.col-lg-offset-9 {
+  margin-left: calc((100% / 12) * 9);
+}
+
+.col-lg-offset-8 {
+  margin-left: calc((100% / 12) * 8);
+}
+
+.col-lg-offset-7 {
+  margin-left: calc((100% / 12) * 7);
+}
+
+.col-lg-offset-6 {
+  margin-left: calc((100% / 12) * 6);
+}
+
+.col-lg-offset-5 {
+  margin-left: calc((100% / 12) * 5);
+}
+
+.col-lg-offset-4 {
+  margin-left: calc((100% / 12) * 4);
+}
+
+.col-lg-offset-3 {
+  margin-left: calc((100% / 12) * 3);
+}
+
+.col-lg-offset-2 {
+  margin-left: calc((100% / 12) * 2);
+}
+
+.col-lg-offset-1 {
+  margin-left: calc((100% / 12) * 1);
+}
+
+
 /* LG */
 
 /* MD */
@@ -171,6 +221,54 @@
 
   .col-md-1 {
     width: calc((100% / 12) * 1);
+  }
+
+  .col-md-offset-12 {
+    margin-left: 100%;
+  }
+
+  .col-md-offset-11 {
+    margin-left: calc((100% / 12) * 11);
+  }
+
+  .col-md-offset-10 {
+    margin-left: calc((100% / 12) * 10);
+  }
+
+  .col-md-offset-9 {
+    margin-left: calc((100% / 12) * 9);
+  }
+
+  .col-md-offset-8 {
+    margin-left: calc((100% / 12) * 8);
+  }
+
+  .col-md-offset-7 {
+    margin-left: calc((100% / 12) * 7);
+  }
+
+  .col-md-offset-6 {
+    margin-left: calc((100% / 12) * 6);
+  }
+
+  .col-md-offset-5 {
+    margin-left: calc((100% / 12) * 5);
+  }
+
+  .col-md-offset-4 {
+    margin-left: calc((100% / 12) * 4);
+  }
+
+  .col-md-offset-3 {
+    margin-left: calc((100% / 12) * 3);
+  }
+
+  .col-md-offset-2 {
+    margin-left: calc((100% / 12) * 2);
+  }
+
+  .col-md-offset-1 {
+    margin-left: calc((100% / 12) * 1);
   }
 }
 /* MD */
@@ -223,6 +321,54 @@
 
   .col-xs-1 {
     width: calc((100% / 12) * 1);
+  }
+
+  .col-xs-offset-12 {
+    margin-left: 100%;
+  }
+
+  .col-xs-offset-11 {
+    margin-left: calc((100% / 12) * 11);
+  }
+
+  .col-xs-offset-10 {
+    margin-left: calc((100% / 12) * 10);
+  }
+
+  .col-xs-offset-9 {
+    margin-left: calc((100% / 12) * 9);
+  }
+
+  .col-xs-offset-8 {
+    margin-left: calc((100% / 12) * 8);
+  }
+
+  .col-xs-offset-7 {
+    margin-left: calc((100% / 12) * 7);
+  }
+
+  .col-xs-offset-6 {
+    margin-left: calc((100% / 12) * 6);
+  }
+
+  .col-xs-offset-5 {
+    margin-left: calc((100% / 12) * 5);
+  }
+
+  .col-xs-offset-4 {
+    margin-left: calc((100% / 12) * 4);
+  }
+
+  .col-xs-offset-3 {
+    margin-left: calc((100% / 12) * 3);
+  }
+
+  .col-xs-offset-2 {
+    margin-left: calc((100% / 12) * 2);
+  }
+
+  .col-xs-offset-1 {
+    margin-left: calc((100% / 12) * 1);
   }
 }
 /* XS */
