--- a/12bool-responsive/css/style.css
+++ b/12bool-responsive/css/style.css
@@ -19,3 +19,14 @@
   top: 50%;
   left: 50%;
 }
+nav [class*="col-"] {
+  height: 80px;
+  background-color: red;
+  line-height: normal;
+}
+
+nav [class*="col-"] li {
+  display: inline-block;
+  text-align: left;
+  line-height: 80px;
+}
