--- a/12bool-responsive/css/style.css
+++ b/12bool-responsive/css/style.css
@@ -13,12 +13,13 @@
   line-height: normal;
 }
 
-.nested {
+[class*="col-"] .container [class*="col-"] > div, .nested {
   position: absolute;
   transform: translate(-50%, -50%);
   top: 50%;
   left: 50%;
 }
+
 nav [class*="col-"] {
   height: 80px;
   background-color: red;
