--- a/spotify/css/style.css
+++ b/spotify/css/style.css
@@ -43,11 +43,27 @@ main {
   overflow-y: auto;
 }
 
+.first-section {
+  display:flex;
+  flex-wrap: wrap;
+  margin-left: 15px;
+}
+
 .content .generic-item {
-  width: 100px;
-  height: 100px;
+  width: calc(100% / 6 - 15px);
   border: 1px #000 solid;
-  margin: 15px;
+  margin-right: 15px;
+  margin-top: 15px;
+  max-width: 200px;
+}
+
+.content .generic-item img {
+  width: 100%;
+  vertical-align: middle;
+}
+
+.content .generic-item .cover-text {
+  text-align: center;
 }
 
 .call-to-action {
@@ -77,4 +93,100 @@ main {
 footer {
   height: 90px;
   background: #333;
+  display: flex;
+  justify-content: space-between;
+  color: #fff;
+}
+
+.mini, .options {
+  width: 20%;
+  border: 1px #fff solid;
+}
+
+.player {
+  width: 60%;
+  /* TODO: ma serve davvero il width? */
+  text-align: center;
+  border: 2px green solid;
+}
+
+.player ul {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.player ul li {
+  list-style: none;
+  font-size: 16px;
+  padding: 10px;
+}
+
+.player ul li.big {
+  font-size: 32px;
+  padding: 10px 20px;
+}
+
+.player ul li.big:hover {
+  transform: scale(1.2);
+}
+
+.player-control-time {
+  background: rgba(255,255,255,.2);
+  width: 100%;
+  height: 4px;
+}
+
+.player-control-time .elapsed-time {
+  position: relative;
+  background: rgba(255,255,255,.8);
+  height: 100%;
+}
+
+.elapsed-time .point {
+  display: none;
+  position: absolute;
+  width: 15px;
+  height: 15px;
+  background-color: #fff;
+  border-radius: 50%;
+  transform: translate(50%, -50%);
+  right: 0;
+  top: 50%;
+}
+
+.player-control-time:hover .point {
+  display: block;
+}
+
+.perc-20 {
+  width: 20%;
+}
+
+.perc-40 {
+  width: 40%;
+}
+
+@media (max-width: 991px) {
+  .content .generic-item {
+    width: calc(100% / 4 - 15px);
+  }
+ }
+
+
+ /* xs */
+ @media (max-width: 767px) {
+   .content .generic-item {
+     width: calc(100% / 2 - 15px);
+   }
+ }
+
+
+/* xs */
+@media (max-width: 575px) {
+  .content .generic-item {
+    width: calc(100% / 2 - 15px);
+  }
+
+
 }
