--- a/effects/css/style.css
+++ b/effects/css/style.css
@@ -21,3 +21,27 @@
   from {background-color: blue}
   to {background-color: red}
 }
+.wrapper{
+  width: 100vw;
+  height: 100vh;
+  position: relative;
+}
+.box-3{
+  width: 200px;
+  height: 200px;
+  background-color: #0f0;
+  position: absolute;
+  top: 0;
+  left: 0;
+  animation-name: gino;
+  animation-duration: 5s;
+  animation-timing-function: ease-in-out;
+}
+@keyframes gino{
+  0% {top:0; left:0}
+  25% {top:0; left:calc(100vw - 200px)}
+  50% {top:calc(100vh - 200px); left:calc(100vw - 200px)}
+  75% {top:calc(100vh - 200px); left:0}
+  100% {top:0; left:0}
+
+}
