--- a/js-vuejs/css/style.css
+++ b/js-vuejs/css/style.css
@@ -3,3 +3,12 @@
   height: 100px;
   background: red;
 }
+
+.selected-color-text {
+  background: #000;
+  color: #fff;
+}
+
+.generic-color-text {
+  color: #000;
+}
