--- a/html-css-toboolist/css/style.css
+++ b/html-css-toboolist/css/style.css
@@ -25,10 +25,6 @@
     border-color: #c4cbd0;
 }
 
-.padding-layout {
-    padding: 20px 50px;
-}
-
 .dot-list {
     display: inline-block;
     border-width: 1px;
@@ -49,6 +45,10 @@
 body {
     background-color: #eee;
     font-family: Arial, Helvetica, sans-serif;
+}
+
+nav, .section-list {
+    padding: 20px 50px;
 }
 
 header {
