--- a/vuejs-slider/css/style.css
+++ b/vuejs-slider/css/style.css
@@ -4,7 +4,19 @@
 
 .slider-picture img {
     width: 100%;
+    display: none;
 }
+
+.slider-picture img.current {
+    display: block;
+    animation: fadeIn .3s linear;
+}
+
+@keyframes fadeIn {
+    0% { opacity: 0; }
+    100% { opacity: 1; }
+}
+
 
 .arrow {
     font-size: 40px;
